# anketa_sinteza_govora

./: .dockerignore  .gitignore  Makefile  README.md  deploy.example.env  docker-compose.deploy.yml  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  example.env  fixes.md
Frontend/: .gitignore  Dockerfiletemp  package.json  tailwind.config.ts  tsconfig.json
Frontend/app/: layout.tsx  page.tsx
Frontend/components/pages/: already-completed-page.tsx  demographics-page.tsx  hearing-test-page.tsx  instructions-page.tsx  survey-page.tsx  thank-you-page.tsx
Frontend/components/shared/: progress-bar.tsx
Frontend/components/ui/: select.tsx  textarea.tsx
Frontend/hooks/: use-survey.ts
Frontend/lib/: api.ts
Frontend/lib/types/: survey.ts
Frontend/lib/utils/: utils.ts
backend/: Dockerfile  pyproject.toml
backend/app/: backend_pre_start.py  main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: audio.py  auth.py  questions.py  reviews.py  utils.py
backend/app/core/: config.py  db.py  security.py
backend/app/crud/: audio_file.py  narrator.py  user.py
backend/app/models/: __init__.py  audio_file.py  narrator.py  token.py  user.py
backend/app/scripts/: export_to_csv.py  export_with_index_to_csv.py  generate_email_templates.py  rename_audios.oy.py  seed_db.py  simulate_full_users.py  simulate_users.py  test_endponts.py
backend/scripts/: prestart.sh  test-resubmittion.sh
frontend/: Dockerfile  next.config.mjs  package.json
frontend/app/: layout.tsx
frontend/hooks/: use-survey.ts
frontend/lib/: api.ts
(+9 files in other folders)
